Fix: added hidden overflow to main to prevent side scrolling

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -23,6 +23,7 @@ p {
 
 main {
   margin-top: 8rem;
+  overflow: hidden;
 }
 
 img {
